hw6_lab10/tests/errors/lex_unclosed_string.kt
fun main() {
    val s = "unclosed string
}
